[metadata]
name = convert
url = https://github.com/zhihaozheng/convert/
summary = haha
description-content-type = text/markdown
description-file = README.md
author = Zhihao Zheng
home-page = https://github.com/zhihaozheng/convert/
license = License :: OSI Approved :: BSD License
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    convert

[extras]
